<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="greeting">Hello</string>
    <string name="click">Click me</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_member">New member?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="create_an_account_here">Create an account here</string>
    <string name="by_signing_up_you_agree_with_our_terms_of_use">By signing up you agree with our Terms of Use</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="alex">Alex</string>
    <string name="select_your_coffee">Select your coffee</string>
    <string name="order">Order</string>
    <string name="ristretto">Ristretto</string>
    <string name="onsite_takeaway">Onsite / Takeaway</string>
    <string name="volume_ml">Volume, ml</string>
    <string name="ml_s">250</string>
    <string name="ml_m">350</string>
    <string name="ml_l">450</string>
    <string name="prepare_by_a_certain_time_today">Prepare by a certain time today?</string>
    <string name="coffee_lover_assemblage">Coffee lover assemblage</string>
    <string name="total_amount">Total Amount</string>
    <string name="next">Next</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="select_barista">Select barista</string>
    <string name="coffee_type">Coffee type</string>
    <string name="arabica">Arabica</string>
    <string name="robusta">Robusta</string>
    <string name="coffee_sort">Coffee sort</string>
    <string name="roasting">Roasting</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="additives">Additives</string>
    <string name="ice">Ice</string>
    <string name="top_barista">Top Barista</string>
    <string name="default_barista_name">Victor</string>
    <string name="select_a_barista">Select a barista</string>
    <string name="cancel">Cancel</string>
</resources>