<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:paddingTop="21dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:lineSpacingExtra="0sp"
            android:gravity="center_horizontal|top"
            android:textAppearance="@style/title"
            android:text="@string/order"/>

        <ImageView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/cart"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/nav_bar"
        android:background="@drawable/my_white_bg_all_rounded"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="19dp"
        android:layout_width="match_parent"
        android:layout_height="146dp">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="121dp"
            android:src="@drawable/card_white_bg_all_rounded"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qty_resizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/product_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/order_specification_title"
                android:text="Capuccino"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_rounded_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="12dp">

                <TextView
                    android:id="@+id/qty_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/order_specification_title"
                    android:text="-"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textAppearance="@style/order_specification_title"
                    android:text="1"/>

                <TextView
                    android:id="@+id/qty_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/order_specification_title"
                    android:text="+"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F4F5F7"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ristretto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/qty_resizer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/order_specification_title"
                android:text="@string/ristretto"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ristretto_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/order_specification_title"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="24dp"
                    android:background="@drawable/bg_primary_all_rounded_50"
                    android:textColor="@color/card_white"
                    android:text="@string/one"/>

                <TextView
                    android:id="@+id/ristretto_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/order_specification_title"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="24dp"
                    android:background="@drawable/grey_rounded_border"
                    android:text="@string/two"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F4F5F7"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/onsite_or_takeway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ristretto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/order_specification_title"
                android:text="@string/onsite_takeaway"/>

            <LinearLayout
                android:baselineAligned="true"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/onsite"
                    android:layout_width="wrap_content"
                    android:layout_height="26.56dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/onsite_cup_disabled"/>

                <ImageView
                    android:id="@+id/take_away"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/takeaway_cup_active"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F4F5F7"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cup_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/onsite_or_takeway">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/order_specification_title"
                android:text="@string/volume_ml"/>

            <LinearLayout
                android:baselineAligned="true"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/volume_s_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="21dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/volume_s_cup"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:src="@drawable/cup_size_m_disabled"/>
                    <TextView
                        android:id="@+id/volume_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/cup_ml_size"
                        android:textColor="@color/grey_border"
                        android:text="@string/ml_s"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/volume_m_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="21dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/volume_m_cup"
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:src="@drawable/cup_size_s_active"/>
                    <TextView
                        android:id="@+id/volume_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/cup_ml_size"
                        android:text="@string/ml_m"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/volume_l_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/volume_l_cup"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:src="@drawable/cup_size_l_disabled"/>
                    <TextView
                        android:id="@+id/volume_l"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/cup_ml_size"
                        android:textColor="@color/grey_border"
                        android:text="@string/ml_l"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F4F5F7"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prepate_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cup_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/order_specification_title"
                android:text="@string/prepare_by_a_certain_time_today"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_prepare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <TextClock
            android:id="@+id/textClock"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="19dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/assemblage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="13dp"
            android:background="@drawable/purple_linear_gradient">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filter"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/card_white"
                android:textAppearance="@style/order_specification_title"

                android:text="@string/coffee_lover_assemblage"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_more"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="9dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/cup_ml_size"
                android:text="@string/total_amount"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/cup_ml_size"
                android:gravity="end"
                android:text="BYN 3.00"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_all_rounded"
            android:text="@string/next"
            android:textColor="@color/card_white"
            android:paddingVertical="11dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>