<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="36dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/welcome"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/alex"
                android:text="@string/alex"
                android:textAppearance="@style/name"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:src="@drawable/cart"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/profile"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:background="@drawable/bg_top_rounded"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/menu_and_category_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/select_your_coffee"
                android:textColor="#D8D8D8"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_bar"
            android:layout_width="match_parent"
            android:layout_height="67.66dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/my_white_bg_all_rounded"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/menu_home"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:src="@drawable/shop" />

            <ImageView
                android:id="@+id/menu_shop"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:src="@drawable/gift_disabled" />

            <ImageView
                android:id="@+id/menu_receipt"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:src="@drawable/receipt_disabled" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>